--- a/dg.ui
+++ b/dg.ui
@@ -6,47 +6,32 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>954</width>
-    <height>802</height>
+    <width>944</width>
+    <height>795</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>время</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="verticalLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>781</width>
-      <height>661</height>
-     </rect>
-    </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QGraphicsView" name="picture_Map"/>
-     </item>
-    </layout>
-   </widget>
    <widget class="QPushButton" name="set_line_map">
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>670</y>
+      <y>650</y>
       <width>101</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
-     <string>Растояние</string>
+     <string>Расстояние</string>
     </property>
    </widget>
    <widget class="QPushButton" name="set_length_map">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>670</y>
+      <y>650</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -58,27 +43,17 @@
    <widget class="QTextBrowser" name="line_map">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>710</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTextBrowser" name="textBrowser_3">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>710</y>
-      <width>121</width>
-      <height>41</height>
+      <x>190</x>
+      <y>690</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="load_map">
     <property name="geometry">
      <rect>
-      <x>790</x>
+      <x>770</x>
       <y>620</y>
       <width>141</width>
       <height>41</height>
@@ -91,11 +66,73 @@
    <widget class="QTextEdit" name="lenght_map">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>710</y>
-      <width>121</width>
+      <x>30</x>
+      <y>690</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>660</y>
+      <width>161</width>
       <height>41</height>
      </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:11pt;&quot;&gt;Время долета снаряда&lt;/span&gt;&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="projectile_flight_time">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>690</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_miss">
+    <property name="geometry">
+     <rect>
+      <x>470</x>
+      <y>680</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Не попал</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_target_destroyed">
+    <property name="geometry">
+     <rect>
+      <x>670</x>
+      <y>680</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Цель подбита</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="button_hit">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>680</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Попадание</string>
     </property>
    </widget>
   </widget>
@@ -104,8 +141,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>954</width>
-     <height>26</height>
+     <width>944</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
